# md

./: Cargo.toml  admonitions.md  chinese-simplified.md  code-block.md  example.md  image-alt.md  lc.md  minimal.md  nesting.md  showcase.md
.cargo/: config.toml
crates/matte/: Cargo.toml
crates/matte-language-names/: Cargo.toml  languages.json  update-languages.bash
crates/matte-language-names/src/: lib.rs
crates/matte/src/: chars.rs  file_uri.rs  footnotes.rs  lib.rs  lookahead.rs  options.rs  prefix.rs  render.rs  syntax_highlighting.rs  writer.rs
crates/matte/src/block/: event.rs  mod.rs
crates/matte/src/block_quote/: author.rs  classification.rs  mod.rs
crates/matte/src/heading/: mod.rs
crates/matte/src/inline/: event.rs  mod.rs  writer.rs
crates/matte/src/list/: bullets.rs  counter_style.rs  item.rs  mod.rs  task_list.rs
crates/matte/src/render/: code_block.rs  footnote_def.rs  paragraph.rs  rule.rs  table.rs
crates/matte/src/style/: stack.rs
crates/matte/src/textwrap/: buffer.rs  display_width.rs  mod.rs  tests.rs
crates/matte/src/themes/: default.rs  mdcat.rs  mod.rs
crates/matte/tests/snapshots/: snapshot__snippets@admonitions.md.snap  snapshot__snippets@chinese-simplified.md.snap  snapshot__snippets@image-alt.md.snap  snapshot__snippets@mdcat.md.snap
crates/matte/tests/snippets/: code-block.md  image-alt.md  inline-formatting.md  prefixed-headings.md  quote-with-author.md
crates/md/: Cargo.toml
crates/md-language-names/: Cargo.toml  build.rs  readme.md
crates/md/src/: cli.rs  file_detection.rs  input.rs  main.rs  output.rs  pager.rs  panic.rs  term.rs
src/: bullets.rs  context.rs  counting.rs  display_width.rs  file_uri.rs  fmt_utils.rs  footnotes.rs  fragment.rs  hyperlink.rs  inline.rs  lib.rs  line_writer.rs  lookahead.rs  macros.rs  main.rs  options.rs  output.rs  pager.rs  paging.rs  prefix.rs  render.rs  style.rs  syntax_highlighting.rs  writer.rs
src/block/: event.rs  mod.rs
src/block_quote/: author.rs  classification.rs  mod.rs
src/heading/: decoration.rs  mod.rs
src/inline/: event.rs  hyperlink.rs  mod.rs  writer.rs
src/list/: counter_style.rs  item.rs
src/render/: block_quote.rs  code_block.rs  context.rs  footnote_def.rs  fragment.rs  heading.rs  inline.rs  list.rs  macros.rs  paragraph.rs  rule.rs  state.rs  table.rs  writer.rs
src/render/block_quote/: classification.rs
src/style/: mod.rs  str.rs
src/textwrap/: buffer.rs  display_width.rs  fragment.rs  mod.rs  tests.rs
src/themes/: default.rs  mdcat.rs
tests/: snapshot.rs
tests/snapshots/: snapshot__snippets@chinese-simplified.md.snap  snapshot__snippets@code-block.md.snap  snapshot__snippets@image-alt.md.snap  snapshot__snippets@inline-formatting.md.snap  snapshot__snippets@lists.md.snap  snapshot__snippets@nesting.md.snap  snapshot__snippets@prefixed-headings.md.snap  snapshot__snippets@quote-with-author.md.snap
tests/snippets/: lists.md  mdcat.md  prefixed-headings.md
