[package]
name = "matte"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark.workspace = true
fmtastic.workspace = true
anstyle.workspace = true
terminal_size.workspace = true
url.workspace = true
bat.workspace = true
matte-language-names = { path = "crates/matte-language-names" }
shell-words = "1.1.0"
thiserror = "1.0.61"
unicode-linebreak-chunked = { git = "https://github.com/bash/unicode-linebreak-chunked.git", branch = "tables" }
trait-set = "0.3.0"
smallvec = "1.13.2"
unicode-width = "0.1.12"
hostname = "0.4.0"

[workspace.dependencies]
pulldown-cmark = "0.11.0"
fmtastic = { version = "0.2.0", git = "https://github.com/bash/fmtastic.git" }
anstyle = "1.0.7"
terminal_size = "0.3.0"
url = "2.5.0"
bat = { version = "0.24.0", default-features = false, features = ["regex-onig"] }

[workspace]
members = ["crates/matte-language-names"]
