[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anstyle = "1.0.7"
bat = { version = "0.24.0", default-features = false, features = ["regex-onig"] }
fmtastic = { version = "0.2.0", git = "https://github.com/bash/fmtastic.git" }
hostname = "0.4.0"
human-panic = "2.0.0"
insta = "1.39"
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
pulldown-cmark = "0.11.0"
serde = "1"
serde_json = "1.0.117"
shell-words = "1.1.0"
smallvec = "1.13.2"
syntect = "5.2.0"
terminal_size = "0.3.0"
thiserror = "1.0.61"
toml = "0.8"
trait-set = "0.3.0"
unicode-linebreak-chunked = { git = "https://github.com/bash/unicode-linebreak-chunked.git", branch = "tables" }
unicode-width = "0.1.12"
url = "2.5.0"
