[package]
name = "matte-language-names"
version = "0.1.0"
edition = "2021"

[dependencies]
bat.workspace = true
phf.workspace = true

[build-dependencies]
bat.workspace = true
phf_codegen.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syntect.workspace = true
